--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -26,6 +26,7 @@ $themes: (
     // background-opaque: rgb(121, 134, 109),
     //logo-green: rgba(8,129,98, 1),
     logo-green: rgb(0, 122, 94),
+    logo-green-60: rgba(0, 122, 94, 0.6),
     // logo-yellow: rgba(254, 209, 10, 1),
     logo-yellow: rgb(252, 209, 22),
     logo-yellow-60: rgba(252, 209, 22, 0.6),
