--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -30,7 +30,7 @@
                                     <a href="#">{{ T "ATransparency" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "AFinance" }}</a>
+                                    <a href="Finanzen">{{ T "AFinance" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "AStatute" }}</a>
@@ -121,6 +121,45 @@
         </li>
         <li  class="has-submenu">
             <a href="#" class="menu-title">{{ T "toHelp" }}</a>
+            <div class="submenu-container-colRight">
+                <div class="submenu">
+                    <h3>
+                        {{ T "toHelpSubHead" }}
+                    </h3>
+                    <div class="colums">
+                        <div class="submenu-column">
+                            <h4>{{ T "toHelpSubCol1" }}</h4>
+                            <img src="/img/Spenden.png" alt="Spenden">
+                            <ul>
+                                <li>
+                                    <a href="#">{{ T "tHPatenschaften" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#">{{ T "tHPatenschaftenService" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#">{{ T "thDonate" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#">{{ T "thDonateProject" }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="submenu-column">
+                            <h4>{{ T "toHelpSubCol2" }}</h4>
+                            <img src="/img/Mitglieder.png" alt="Mitglieder">
+                            <ul>
+                                <li>
+                                    <a href="Helfen/MitgliedWerden">{{ T "tHGetMitglied" }}</a>
+                                </li>
+                                <li>
+                                    <a href="#">{{ T "tHMitgliedService" }}</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </li>
     </ul>
 </nav>
