--- a/assets/scss/_default/single.scss
+++ b/assets/scss/_default/single.scss
@@ -120,7 +120,7 @@
           padding: 5px;
           border: 1px solid themed(logo-green-60);
           font-size: 18px;
-          width: 300px;
+          width: 90%;
           color: themed(logo-green);
         }
 
