--- a/assets/scss/partials/common/footer.scss
+++ b/assets/scss/partials/common/footer.scss
@@ -55,7 +55,8 @@
 
     .footer-address {
         // flex-grow: 0;
-        padding-left: 30px;
+        padding-left: 15px;
+        padding-right: 15px;
         // padding-right: 0px;
         // padding-top: 10px;
         // padding-bottom: 10px;
