--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -21,6 +21,7 @@ $themes: (
     text-black: black,
     text-main-menu: white,
     background-logo-white: white,
+    table-line: grey,
     // background-beige: beige,    
     // background-opaque: rgb(121, 134, 109),
     //logo-green: rgba(8,129,98, 1),
@@ -29,10 +30,12 @@ $themes: (
     // logo-yellow: rgba(254, 209, 10, 1),
     logo-yellow: rgb(252, 209, 22),
     logo-yellow-60: rgba(252, 209, 22, 0.6),
+    logo-yellow-30: rgba(252, 209, 22, 0.3),
     // logo-green-transparent: rgba(8,129,98, 0.2),
     // logo-yellow-transparent: rgba(254, 209, 10, 0.2),
     // logo-red: rgba(209,18,39,1),
     logo-red: rgb(206, 17, 38),
+    logo-red-60: rgba(206, 17, 38, 0.6),
     // website-background: rgba(204, 202, 195, 1),
     //website-background: rgb(209, 228, 209),
     // website-background: rgb(208, 170, 174),
