--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -60,7 +60,7 @@
                             <img src="/img/weizen.png" alt="Versorgung">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "wwDOneMeal" }}</a>
+                                    <a href="Versorgung/EineWarmeMahlzeit">{{ T "wwDOneMeal" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "wwDCleanWater" }}</a>
