--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -2068,12 +2068,20 @@
     padding-top: 20px; }
   .light-theme .single h4 {
     padding-top: 20px; }
+  .light-theme .single .div-small-img {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0px 12px;
+    justify-content: center;
+    /* Horizontales Zentrieren */
+    text-align: center;
+    align-items: center; }
   .light-theme .single input, .light-theme .single select {
     background-color: #e3e2d4;
     text-align: left;
     border-radius: 3px;
     padding: 5px;
-    border: 1px solid rgba(0, 122, 94, 0.6);
+    border: 1px solid grey;
     font-size: 18px;
     width: 90%;
     color: #007a5e; }
@@ -2098,12 +2106,15 @@
     /* Horizontales Zentrieren */
     text-align: center;
     align-items: center; }
+    .light-theme .single .img-div .small-img {
+      height: 50vh;
+      width: auto; }
   .light-theme .single input[type="checkbox"] {
     display: none; }
   .light-theme .single label img {
     width: var(--image-width);
     margin-top: 10px;
-    border-color: #fcd116;
+    border-color: grey;
     border-width: 2px;
     border-style: solid;
     margin-bottom: 0;
@@ -2142,17 +2153,27 @@
   .light-theme .single .combobox-details {
     background-color: #e3e2d4;
     padding: 7px;
-    border: 1px solid rgba(252, 209, 22, 0.6);
+    border: 1px solid grey;
     cursor: pointer;
     margin-top: 2px;
-    margin-bottom: 2px; }
+    margin-bottom: 2px;
+    transition: transform 0.15s ease, box-shadow 0.15s ease; }
+    .light-theme .single .combobox-details:hover {
+      transform: scale(1.002);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
+  .light-theme .single .div-details {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 1px solid grey; }
   .light-theme .single .patenschaft-container {
     background-color: #e3e2d4;
     padding: 7px;
-    border: 2px solid rgba(0, 122, 94, 0.6);
+    border: 5px solid rgba(206, 17, 38, 0.6);
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    margin-right: 10px;
     margin-top: 2px;
     margin-bottom: 2px; }
     .light-theme .single .patenschaft-container img {
@@ -2163,6 +2184,8 @@
         padding: 0px; }
     .light-theme .single .patenschaft-container button {
       margin-left: auto; }
+  .light-theme .single .patenschaft-container-versorgt {
+    border: 2px solid rgba(0, 122, 94, 0.6); }
   .light-theme .single .kleine-tabelle {
     margin-top: 10px;
     width: var(--image-width);
@@ -2197,10 +2220,10 @@
   .light-theme .single .kleine-tabelle tbody {
     display: block;
     overflow: hidden;
-    border: 2px solid rgba(252, 209, 22, 0.6); }
+    border: 2px solid grey; }
   .light-theme .single .kleine-tabelle tbody td {
     padding: 8px 16px;
-    border: 1px solid rgba(252, 209, 22, 0.6);
+    border: 1px solid grey;
     text-align: left;
     vertical-align: middle; }
   .light-theme .single .kleine-tabelle tbody td:last-child {
@@ -2241,7 +2264,7 @@
     border: 2px solid rgba(252, 209, 22, 0.6);
     width: 120px; }
   .light-theme .single .finanzen-tabelle tbody {
-    border: 2px solid rgba(252, 209, 22, 0.6);
+    border: 2px solid grey;
     display: block;
     max-height: 384px;
     /* Scrollbare Höhe */
@@ -2250,7 +2273,7 @@
     overflow-x: hidden; }
   .light-theme .single .finanzen-tabelle tbody td {
     padding: 4px 16px;
-    border: 1px solid rgba(252, 209, 22, 0.6);
+    border: 1px solid grey;
     text-align: left;
     vertical-align: middle;
     background-color: #e3e2d4; }
@@ -2415,6 +2438,14 @@
     padding-top: 20px; }
   .dark-theme .single h4 {
     padding-top: 20px; }
+  .dark-theme .single .div-small-img {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0px 12px;
+    justify-content: center;
+    /* Horizontales Zentrieren */
+    text-align: center;
+    align-items: center; }
   .dark-theme .single input, .dark-theme .single select {
     background-color: #575651;
     text-align: left;
@@ -2445,12 +2476,14 @@
     /* Horizontales Zentrieren */
     text-align: center;
     align-items: center; }
+    .dark-theme .single .img-div .small-img {
+      height: 50vh;
+      width: auto; }
   .dark-theme .single input[type="checkbox"] {
     display: none; }
   .dark-theme .single label img {
     width: var(--image-width);
     margin-top: 10px;
-    border-color: #534504;
     border-width: 2px;
     border-style: solid;
     margin-bottom: 0;
@@ -2490,14 +2523,24 @@
     border: 1px solid;
     cursor: pointer;
     margin-top: 2px;
-    margin-bottom: 2px; }
+    margin-bottom: 2px;
+    transition: transform 0.15s ease, box-shadow 0.15s ease; }
+    .dark-theme .single .combobox-details:hover {
+      transform: scale(1.002);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
+  .dark-theme .single .div-details {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border: 1px solid; }
   .dark-theme .single .patenschaft-container {
     background-color: #575651;
     padding: 7px;
-    border: 2px solid;
+    border: 5px solid;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    margin-right: 10px;
     margin-top: 2px;
     margin-bottom: 2px; }
     .dark-theme .single .patenschaft-container img {
@@ -2508,6 +2551,8 @@
         padding: 0px; }
     .dark-theme .single .patenschaft-container button {
       margin-left: auto; }
+  .dark-theme .single .patenschaft-container-versorgt {
+    border: 2px solid; }
   .dark-theme .single .kleine-tabelle {
     margin-top: 10px;
     width: var(--image-width);
