--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -24,7 +24,7 @@
                                     <a href="#">{{ T "AGoal" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "AOrganization" }}</a>
+                                    <a href="derVerein/Organisation">{{ T "AOrganization" }}</a>
                                 </li>
                                 <li>
                                     <a href="#">{{ T "ATransparency" }}</a>
